# miBF-mapper

./: .gitignore  .gitmodules  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
Common/: Options.cpp  Options.h
DataAnalysis/: calc_map_accuracy.py  config.py  data_analysis.py  data_analysis_for_read.py  utils.py
MIBFAnalyze/: MIBFAnalyze.cpp  MIBFAnalyzeReads.cpp  Makefile.am
MIBFConstruct/: BioBloomMIMaker.cpp  MIBFGen.hpp  Makefile  Makefile.am  Makefile.in  biobloommimaker
MIBFConstruct/.deps/: biobloommimaker-BioBloomMIMaker.Po  biobloommimaker-Options.Po
MIBFMetaGenomeClassify/: readTaxonomyTree.cpp  readTaxonomyTree.hpp
MIBFPair/: MIBFPairContigs.cpp  MIBFPairContigs_old.cpp  Makefile.am  biobloompair
MIBFPair/.deps/: biobloompair-MIBFPairContigs.Po
MIBFScaffold/: create_tigpair_checkpoint.py
Tests/: create_test_dataset.py  run_test.sh
Utilities/: mi_bf_nthash.hpp
