SUBDIRS = \
	Common \
	MIBFConstruct \
	MIBFPair \
	MIBFAnalyze

dist_doc_DATA = \
	README.md
	
EXTRA_DIST =
	btl_bloomfilter/MIBloomFilter.hpp \
	btl_bloomfilter/MIBFQuerySupport.hpp \
	btl_bloomfilter/MIBFConstructSupport.hpp \
	btl_bloomfilter/vendor/stHashIterator.hpp \
	btl_bloomfilter/vendor/nthash.hpp \
	btl_bloomfilter/vendor/ntHashIterator.hpp \
	btl_bloomfilter/vendor/IOUtil.h \
	btl_bloomfilter/vendor/cpptoml/include/cpptoml.h